--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     
 </head>
 <style>
+  body{
+    margin:0px
+  }
      ul.a {
   list-style-type: none;
   margin: 5px;
   padding: 0px;
+  margin-left: 0px;
+  margin-right:0px;
   overflow: hidden;
   background-color: #660066;
 }
